new endpoints plus image data send
